# mlops

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: mlops.yaml
src/sentiment140_mlops/data/: make_dataset.py
src/sentiment140_mlops/models/: predict_model.py  select_best.py  train_dl.py  train_ml.py
