[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "sentiment140_mlops"
version = "0.0.1"
description = "A short description of the project."
authors = [
  { name = "anhnt2112" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["sentiment140_mlops"]
include = ["pyproject.toml", "sentiment140_mlops/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["sentiment140_mlops"]
force-sort-within-sections = true

